--- a/src/main/views/pageadherent.fxml
+++ b/src/main/views/pageadherent.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.AdherentController">
@@ -23,7 +24,7 @@
       <TextArea fx:id="prenomTextArea" layoutX="272.0" layoutY="306.0" prefHeight="31.0" prefWidth="201.0" />
       <Text layoutX="117.0" layoutY="418.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 15;" text="Nombre d'emprunt" />
       <Button layoutX="117.0" layoutY="635.0" mnemonicParsing="false" onMouseClicked="#modifierAdherent" prefHeight="58.0" prefWidth="171.0" text="modifier " />
-      <TableView fx:id="livresTableView" layoutX="503.0" layoutY="113.0" prefHeight="443.0" prefWidth="722.0" onMouseClicked="#handleBookSelection">
+      <TableView fx:id="livresTableView" layoutX="503.0" layoutY="113.0" onMouseClicked="#handleBookSelection" prefHeight="443.0" prefWidth="722.0">
          <columns>
             <TableColumn fx:id="titreColumn" prefWidth="217.73193359375" text="Titre" />
             <TableColumn fx:id="auteurColumn" minWidth="1.9793701171875" prefWidth="188.0411376953125" text="Auteur" />
@@ -32,8 +33,19 @@
             <TableColumn fx:id="dateRendu" prefWidth="254.3505859375" text="Date de rendu" />
          </columns>
       </TableView>
-      <Button layoutX="865.0" layoutY="635.0" mnemonicParsing="false"  prefHeight="58.0" prefWidth="171.0" text="Historique" />
-      <Button layoutX="1070.0" layoutY="635.0" mnemonicParsing="false" onMouseReleased="#rendreLivre" prefHeight="58.0" prefWidth="171.0" text="Rendre" />
+      <Button fx:id="historique" layoutX="865.0" layoutY="635.0" mnemonicParsing="false" onAction="#chargerHistorique" prefHeight="58.0" prefWidth="171.0" text="Historique" />
+      <Button fx:id="rendre" layoutX="1070.0" layoutY="635.0" mnemonicParsing="false" onMouseReleased="#rendreLivre" prefHeight="58.0" prefWidth="171.0" text="Rendre" />
+      <Button fx:id="emprunter" layoutX="1070.0" layoutY="635.0" mnemonicParsing="false" onAction="#ButtonchargerLivresEmpruntes" prefHeight="58.0" prefWidth="171.0" text="Emprunter" />
+      <Label fx:id="historiquelabel" layoutX="848.0" layoutY="58.0" text="Historique">
+         <font>
+            <Font name="System Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="emprunterlabel" layoutX="855.0" layoutY="58.0" text="Emprunter">
+         <font>
+            <Font name="System Italic" size="20.0" />
+         </font>
+      </Label>
 
    </children>
 </AnchorPane>
