--- a/src/main/views/pageadherent.fxml
+++ b/src/main/views/pageadherent.fxml
@@ -23,7 +23,7 @@
       <TextArea fx:id="mailTextArea" layoutX="271.0" layoutY="351.0" prefHeight="40.0" prefWidth="202.0" />
       <TextArea fx:id="prenomTextArea" layoutX="272.0" layoutY="306.0" prefHeight="31.0" prefWidth="201.0" />
       <Text layoutX="117.0" layoutY="418.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 15;" text="Nombre d'emprunt" />
-      <Button layoutX="117.0" layoutY="635.0" mnemonicParsing="false" onMouseClicked="#modifierAdherent" prefHeight="58.0" prefWidth="171.0" text="modifier " />
+      <Button layoutX="186.0" layoutY="455.0" mnemonicParsing="false" onMouseClicked="#modifierAdherent" prefHeight="58.0" prefWidth="171.0" text="modifier " />
       <TableView fx:id="livresTableView" layoutX="503.0" layoutY="113.0" onMouseClicked="#handleBookSelection" prefHeight="443.0" prefWidth="722.0">
          <columns>
             <TableColumn fx:id="titreColumn" prefWidth="217.73193359375" text="Titre" />
@@ -46,6 +46,9 @@
             <Font name="System Italic" size="20.0" />
          </font>
       </Label>
+      <Button fx:id="returnButton" layoutX="61.0" layoutY="668.0" mnemonicParsing="false" onAction="#handleReturnButtonClick" prefHeight="38.0" prefWidth="81.0" text="Return" />
+
+      
 
    </children>
 </AnchorPane>
