--- a/src/main/views/emprunt.fxml
+++ b/src/main/views/emprunt.fxml
@@ -21,7 +21,7 @@
             <HBox spacing="10">
                 <TextArea fx:id="textFieldTitre" prefHeight="37.0" prefWidth="329.0" promptText="Recherche de livres..." />
 
-                <Button prefHeight="25.0" prefWidth="166.0" text="Rechercher" />
+                <Button prefHeight="25.0" prefWidth="166.0" text="Rechercher" onAction="#handleSearchUser"/>
             </HBox>
             <HBox prefHeight="555.0" prefWidth="341.0">
                 <TableView fx:id="userTableView" onMouseClicked="#handleUserSelection" prefHeight="544.0" prefWidth="331.0">
