--- a/src/main/views/pageadherent.fxml
+++ b/src/main/views/pageadherent.fxml
@@ -47,7 +47,7 @@
          </font>
       </Label>
       <Button fx:id="returnButton" layoutX="61.0" layoutY="668.0" mnemonicParsing="false" onAction="#handleReturnButtonClick" prefHeight="38.0" prefWidth="81.0" text="Retour" />
-      <Button layoutX="186.0" layoutY="527.0" mnemonicParsing="false" onMouseClicked="#modifierAdherent" prefHeight="58.0" prefWidth="171.0" text="Bannir" />
+      <Button layoutX="186.0" layoutY="527.0" mnemonicParsing="false" onAction="#banUser" prefHeight="58.0" prefWidth="171.0" text="Bannir" />
 
       
 
