--- a/src/main/views/pageprincipal.fxml
+++ b/src/main/views/pageprincipal.fxml
@@ -15,19 +15,18 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.MainControllers">
     <children>
-        <Button layoutX="537.0" layoutY="316.0" mnemonicParsing="false" onAction="#handleNewAdherentButtonClick" prefHeight="88.0" prefWidth="201.0" style="-fx-font-size: 20;" text="Nouvel adhérent" />
-        <TextArea fx:id="SearchUser" layoutX="106.0" layoutY="95.0" prefHeight="48.0" prefWidth="332.0" />
-        <Button layoutX="450.0" layoutY="95.0" onAction="#handleSearchUser" prefHeight="48.0" prefWidth="100.0" text="Research" />
+        <TextArea fx:id="SearchUser" layoutX="81.0" layoutY="95.0" prefHeight="48.0" prefWidth="332.0" />
+        <Button layoutX="426.0" layoutY="95.0" onAction="#handleSearchUser" prefHeight="48.0" prefWidth="100.0" text="Research" />
         <Text layoutX="187.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="rechercher adhérent" textAlignment="CENTER" wrappingWidth="170.06829071044922" />
-        <TextArea fx:id="SearchBook" layoutX="821.0" layoutY="96.0" prefHeight="46.0" prefWidth="333.0" />
-        <Button layoutX="1174.0" layoutY="119.0" onAction="#loadFirst20Books" prefHeight="0.0" prefWidth="76.0" text="Research" />
+        <TextArea fx:id="SearchBook" layoutX="783.0" layoutY="96.0" prefHeight="46.0" prefWidth="333.0" />
+        <Button layoutX="1146.0" layoutY="96.0" onAction="#loadFirst20Books" prefHeight="46.0" prefWidth="82.0" text="Research" />
         <Text layoutX="935.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="rechercher livre" textAlignment="CENTER" wrappingWidth="105.73839569091797" />
         <Text layoutX="563.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 40;" text="CYbooks" />
 
 
-        <TableView  onMouseClicked="#handleUserClick" fx:id="userTableView" layoutX="46.0" layoutY="148.0" prefHeight="487.0" prefWidth="480.0">
+        <TableView fx:id="userTableView" layoutX="46.0" layoutY="148.0" onMouseClicked="#handleUserClick" prefHeight="487.0" prefWidth="480.0">
             <columns>
-                <TableColumn  fx:id="prenom" prefWidth="182.0" text="prenom">
+                <TableColumn fx:id="prenom" prefWidth="182.0" text="prenom">
                     <cellValueFactory>
                         <PropertyValueFactory property="prenom" />
                     </cellValueFactory>
@@ -89,6 +88,8 @@
             <RadioButton fx:id="searchbyisbn" layoutY="36.0" mnemonicParsing="false" text="Search by ISBN" />
          </children>
       </Pane>
-      <Button layoutX="537.0" layoutY="547.0" mnemonicParsing="false" onAction="#handleNewBorrowButtonClick" prefHeight="88.0" prefWidth="201.0" style="-fx-font-size: 20;" text="Emprunter" />
+      <Button layoutX="540.0" layoutY="348.0" mnemonicParsing="false" onAction="#handleNewBorrowButtonClick" prefHeight="88.0" prefWidth="201.0" style="-fx-font-size: 20;" text="Emprunter" />
+        <Button layoutX="540.0" layoutY="232.0" mnemonicParsing="false" onAction="#handleNewAdherentButtonClick" prefHeight="88.0" prefWidth="201.0" style="-fx-font-size: 20;" text="Nouvel adhérent" />
+        <Button fx:id="showLateBooksButton" layoutX="540.0" layoutY="500.0" mnemonicParsing="false" text="Afficher Liste Retard" onAction="#showLateLoansView" prefHeight="88.0" prefWidth="201.0" style="-fx-font-size: 20;" />
     </children>
 </AnchorPane>
